0.1.0
- Initial Release
- This mod is in the early development phase
- All classes moved from CaliberMod for use in other mods
- Added BlockState/Model DataGen for Hanging Signs
- Added Missing layer_block model

0.1.1
- Added BlockProps to ensure block property consistency across mods
- Added README.md

0.1.2
- Removed Pressure Plate Variant from Planks variants as it exists in Vanilla Minecraft
- Added Mud Brick to BlockProps
- Fixed block naming and textures to account for Stripped Bamboo Block Variants
- Removed and consolidated redundant Enums and ModBlockStateProperties

0.1.3 (in progress)
- Added Buttons, Signs, Hanging Signs, Doors, Tall Doors, and Trapdoors to BlockManager
- Added Block and Item Tag Data Generation
- Refactored Slabs and Vertical Slabs to Layers and Vertical Layers (this just makes sense to avoid complications with vanilla slabs)
- Added CornerSlabLayers and VerticalCornerSlabLayers to add layers functionality to Corner Slab variants
- Added EighthLayer blocks to add layers functionality to Eighth Blocks







